--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^2.4.2",
     "react": "^0.14.8",
     "react-native": "^0.25.1",
+    "react-native-hockeyapp": "^0.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
