--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^0.14.8",
     "react-native": "^0.25.1",
     "react-native-hockeyapp": "^0.3.0",
+    "react-native-vector-icons": "^2.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "superagent": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
