--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-polyfill": "^6.8.0",
+    "deep-equal": "^1.0.1",
     "firebase": "^2.4.2",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-native": "^0.25.1",
+    "react-native-gifted-messenger": "^0.1.4",
     "react-native-hockeyapp": "^0.3.0",
+    "react-native-invertible-scroll-view": "^1.0.0",
     "react-native-vector-icons": "^2.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
