--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gifted-messenger": "^0.1.4",
     "react-native-hockeyapp": "^0.3.0",
     "react-native-invertible-scroll-view": "^1.0.0",
+    "react-native-spinkit": "^0.1.0",
     "react-native-vector-icons": "^2.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
