--- a/ios/ACE.xcodeproj/xcshareddata/xcschemes/TalksApp.xcscheme
+++ b/ios/ACE.xcodeproj/xcshareddata/xcschemes/TalksApp.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "TalksApp.app"
-               BlueprintName = "TalksApp"
-               ReferencedContainer = "container:TalksApp.xcodeproj">
+               BlueprintName = "ACE"
+               ReferencedContainer = "container:ACE.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TalksAppTests.xctest"
-               BlueprintName = "TalksAppTests"
-               ReferencedContainer = "container:TalksApp.xcodeproj">
+               BuildableName = "ACE.xctest"
+               BlueprintName = "ACETests"
+               ReferencedContainer = "container:ACE.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TalksAppTests.xctest"
-               BlueprintName = "TalksAppTests"
-               ReferencedContainer = "container:TalksApp.xcodeproj">
+               BuildableName = "ACE.xctest"
+               BlueprintName = "ACETests"
+               ReferencedContainer = "container:ACE.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -58,8 +58,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "TalksApp.app"
-            BlueprintName = "TalksApp"
-            ReferencedContainer = "container:TalksApp.xcodeproj">
+            BlueprintName = "ACE"
+            ReferencedContainer = "container:ACE.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -81,8 +81,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "TalksApp.app"
-            BlueprintName = "TalksApp"
-            ReferencedContainer = "container:TalksApp.xcodeproj">
+            BlueprintName = "ACE"
+            ReferencedContainer = "container:ACE.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -100,8 +100,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "TalksApp.app"
-            BlueprintName = "TalksApp"
-            ReferencedContainer = "container:TalksApp.xcodeproj">
+            BlueprintName = "ACE"
+            ReferencedContainer = "container:ACE.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
