--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
-    "superagent": "^1.8.3"
+    "superagent": "^1.8.3",
+    "superagent-promise-plugin": "^3.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
